Добавляет вывод средств с кошелька
