# internal/dto/wallets.go
@@ -17,3 +17,13 @@ type DepositResponse struct {
 	Message    string             `json:"message"`
 	NewBalance pkg.AccountWallets `json:"new_balance"`
 }
+
+type WithdrawRequest struct {
+	Amount   float32 `json:"amount" binding:"required,gt=0"`
+	Currency string  `json:"currency" binding:"required"`
+}
+
+type WithdrawResponse struct {
+	Message    string             `json:"message"`
+	NewBalance pkg.AccountWallets `json:"new_balance"`
+}
